adding post and get admin statements
